@@ -9,15 +9,21 @@ my @langs = DateTime::Language->languages();
 my @codes = DateTime::Language->iso_codes();
 push @codes, 'en-us', 'en-uk';
 
-plan tests => scalar @langs + scalar @codes + 1;
+plan tests => 1 + scalar @codes + ( scalar @langs * 2 );
 
 foreach my $lang ( sort @langs, sort @codes )
 {
-    eval { DateTime->new( year => 1900,
-                          language => $lang,
-                          time_zone => 'UTC',
-                        ) };
+    my $dt;
+    eval { $dt = DateTime->new( year => 1900,
+                                language => $lang,
+                                time_zone => 'UTC',
+                              ) };
     ok( ! $@, "Load language: $lang\n" );
+
+    if ( $lang =~ /^[A-Z]/ )
+    {
+        is( $dt->language->name, $lang, "language name is $lang" );
+    }
 }
 
 eval { DateTime->new( year => 1900, language => 'fo-ba' ) };
